<resources>
    <string name="app_name">PaintApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="color_button_text">Color</string>
    <string name="size_button_text">Size</string>
    <string name="undo_button_text">Undo</string>
    <string name="red_button">R</string>
    <string name="yellow_button">Y</string>
    <string name="blue_button">B</string>
    <string name="small_brush">SM</string>
    <string name="medium_brush">MD</string>
    <string name="large_brush">LG</string>
</resources>
