<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.intrepid.hhansson.paintapp.PaintingView
            android:id="@+id/painting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        </io.intrepid.hhansson.paintapp.PaintingView>

    </LinearLayout>


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_button_text"
        android:id="@+id/color_selection_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_button_text"
        android:id="@+id/size_selection_button"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/color_selection_button"
        android:layout_toEndOf="@+id/color_selection_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/undo_button_text"
        android:id="@+id/undo_button"
        android:layout_alignTop="@+id/size_selection_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/red_button"
        android:id="@+id/red_button"
        android:layout_above="@+id/color_selection_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow_button"
        android:id="@+id/yellow_button"
        android:layout_above="@+id/red_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_button"
        android:id="@+id/blue_button"
        android:layout_above="@+id/yellow_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_brush"
        android:id="@+id/small_brush_button"
        android:layout_above="@+id/size_selection_button"
        android:layout_alignLeft="@+id/size_selection_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_brush"
        android:id="@+id/medium_brush_button"
        android:layout_above="@+id/small_brush_button"
        android:layout_alignLeft="@+id/size_selection_button" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_brush"
        android:id="@+id/large_brush_button"
        android:layout_above="@+id/medium_brush_button"
        android:layout_alignLeft="@+id/size_selection_button" />
</RelativeLayout>
